--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h2>Let's Get in Touch!</h2>
-    <p>Email: <a href="mailto:contact.hongyennguyen@gmail.com">contact.hongyennguyen@gmail.com</a></p>
+    <a href="mailto:contact.hongyennguyen@gmail.com"><img src="./assets/images/Gmail-icon.png" height="50px" width="50px"/></a>
+    <a href="https://www.linkedin.com/in/hong-yen-nguyen-business"><img src="./assets/images/linkedin-icon.png" height="50px" width="50px" /></a>
+    <br />
     <br />
     <a href="./index.html">Back to Resume</a>
 </body>
