--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
     <section>
     <h1>Hong Yen Nguyen</h1>
     <img src="./assets/images/yen-nguyen.JPG" height="200px" alt="hong-yen-nguyen-profile-picture"/>
-    <h3>Nurse Turned Web Developer</h3>
-    <p>I have always loved the process of creating and designing which is why I left nursing for more creative pursuits. 
+    <h3>Aspiring Web Developer</h3>
+    <p>I previously worked as a Registered Nurse but have always loved the process of creating and designing.  
         In 2022, I dabbled in freelance digital marketing, social media management, and video and image-based content creation. 
         I began learning to build simple websites for my clients using a SaaS and that was when my interests turned to web development.</p>
-    <p>As of mid 2023, I started learning web development full-time with hope of becoming an official web developer one day. Though it is quite difficult, I have enjoyed the journey very much!
-        Let's connect and see how we can collaborate!</p>
+    <p>Recently, I started focusing on learning web design and development with hopes of becoming an official web developer one day. Though it is quite difficult, I have enjoyed the journey very much!</p>
 
     <hr />
     
     <h3>Education</h3>
     <ul>
-        <li>
-            The Complete 2023 Web Development Bootcamp <em>(Ongoing)</em></li>
+        <li>The Complete 2023 Web Development Bootcamp <em>(Ongoing)</em></li>
         <li>Harvard CS50x <em>(Ongoing)</em></li>
+        <li>Bay Valley Tech Free CodeCamp <em>(Ongoing)</em></li>
         <li>California State University - Sacramento | 2015 - 2017
             <ul>
                 <li>Bachelor of Science Nursing</li>
@@ -51,7 +50,7 @@
                 <td>
                     <ul>
                         <li>Assist local businesses to build conversion focused websites and automate their services</li>
-                        <li>Utilize Google Ads and Facebook ads to promote local business services</li>
+                        <li>Utilize Google Ads to promote local business services</li>
                         <li>Create social media content to establish branding & business goals</li>
                     </ul>
                 </td>
